[gd_scene load_steps=2 format=3 uid="uid://de41gm1mh1fsm"]

[ext_resource type="Script" path="res://addons/FeagiIntegration/Window/FromFeagiLine/FromFeagiLine.gd" id="1_ly25m"]

[node name="FromFeagiLine" type="HBoxContainer"]
script = ExtResource("1_ly25m")

[node name="UI_Action" type="LineEdit" parent="."]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
tooltip_text = "Input Map Action"
editable = false

[node name="FEAGI_Key" type="LineEdit" parent="."]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
tooltip_text = "The key to search for from the JSONs FEAGI outputs"
placeholder_text = "FEAGI KEY"

[node name="FEAGI_Val" type="LineEdit" parent="."]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
tooltip_text = "The value to check for from the JSONs FEAGI outputs within the key in order to triffer the UI action"
placeholder_text = "FEAGI MATCH"

[node name="Delete" type="Button" parent="."]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
text = "x"

[connection signal="pressed" from="Delete" to="." method="_user_deleted"]
